RIP-v10- /mobile overflow fix in progress

--- a/css/login.css
+++ b/css/login.css
@@ -403,7 +403,7 @@
     display       : flex;
     flex-direction: column !important;
     width         : 100%;
-    height        : auto;
+
     padding-top   : 0px;
 
   }
